fix code smells from sonar