@@ -20,8 +20,10 @@ public class CartonService {
     private final ModelMapper modelMapper;
 
     public List<CartonDTO> getAllCartons() {
-        List<Carton> laptops = cartonRepository.findByDeletedFalse();
-        return laptops.stream().map(carton -> modelMapper.map(carton, CartonDTO.class)).collect(Collectors.toList());
+        List<Carton> cartons = cartonRepository.findByDeletedFalse();
+        return cartons.stream()
+                .map(carton -> modelMapper.map(carton, CartonDTO.class))
+                .toList();
     }
 
     public CartonDTO getCartonById(Long id) throws ChangeSetPersister.NotFoundException {
